# hangar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DAEMON_UPDATE_SUMMARY.md  DEBUG_GUIDE.md  ENABLE_DISABLE_SUMMARY.md  FILE_WATCH_FEATURE.md  FIXES.md  FIXES_SUMMARY.md  NODE_COUNT_FIX.md  OPTIMIZATION_PLAN.md  QUICKSTART.md  README.md  SUBSCRIPTION_ENABLE_DISABLE.md  TEST_CHECKLIST.md  TONIGHT_PLAN.md  VERIFICATION.md  basic_test.yml  clash_test.yml  cli.md  hangar-server.sh  install.sh  output_config.yaml  package-lock.json  package.json  subscriptions.json  test-critical-fixes.sh  test-debug.sh  test-delete.json  test-enable-disable.sh  test-file-watch.sh  test-run.sh  test_e2e.sh  wdio.conf.ts
.claude/: commands.json  settings.local.json
.github/workflows/: deploy-landing.yml
_docs/: CLI.md  README_PROJECT.md  SPEC.md  USAGE.md  basic.yml  basic_rule2.yml  readme.md  subscriptions.example.json  subscriptions.json  规则.md
desgin/: landing-page.pen
desgin/dashboard-page/: code.html
desgin/setting-page/: code.html
desgin/subscription-page/: code.html
landing_page/: index.html  main.js  package.json  spec.md  style.css  tailwind.config.js  wrangler.jsonc
resources/: clash-doc-urls.txt  clash-example-naiyun.yml  clash-example-speedcat.yml
scripts/: README.md  build-dmg.sh  build-linux.sh  create-dmg-background.sh  create-simple-icon.sh  fetch-subs.sh  generate-icon.sh  quick-build.sh  simple-dmg.sh  test-app.applescript  test-dev.sh  verify.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  output_config.yaml  tauri.conf.json  test_history.sh
src-tauri/icons/: icon.icns
src-tauri/resources/: basic.yml  groups.yml
src-tauri/src/: ai.rs  config.rs  lib.rs  main.rs  notifications.rs  proxy.rs  rules.rs  server.rs  storage.rs  subscription.rs  types.rs  version.rs
src/components/: MainTab.tsx  SettingsTab.tsx  SubscriptionsTab.tsx
src/components/ui/: dialog.tsx  tabs.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
tests/e2e/: ai.spec.ts  server.spec.ts  subscriptions.spec.ts
