[package]
name = "hangar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "hangar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hangar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.5"
base64 = "0.22"
anyhow = "1.0"
lazy_static = "1.4"
dirs = "5"
uuid = { version = "1.20.0", features = ["v4"] }
json-patch = "4.1.0"
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive"] }
notify = "7.0"
libc = "0.2"
similar = "2.7"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]
